fix broken layout bug

--- a/src/styles.css
+++ b/src/styles.css
@@ -604,6 +604,10 @@ background-color: rgb(249, 250, 253);
   margin-bottom: 12px;
 }
 
+.show-data {
+  word-wrap: break-word;
+}
+
 .show-data li {
   border-bottom: 1px dotted #e3e3e3;
 }
